force-app/main/default/objects/Innova_Location__c/Innova_Location__c.object-meta.xml
<CustomObject>
    <description>This custom object is to store office location of all regions and brands</description>
    <label>Office Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>