force-app/main/default/objects/Innova_Location__c/fields/Innova_Actual_head_count_at_office__c.field-meta.xml
<CustomField>
    <fullName>Innova_Actual_head_count_at_office__c</fullName>
    <label>Actual head count at office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>