force-app/main/default/objects/Innova_Location__c/fields/Innova_City__c.field-meta.xml
<CustomField>
    <fullName>Innova_City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>