force-app/main/default/objects/Innova_Location__c/fields/Innova_Country__c.field-meta.xml
<CustomField>
    <fullName>Innova_Country__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>