force-app/main/default/objects/Innova_Location__c/fields/Innova_Days_Left__c.field-meta.xml
<CustomField>
    <fullName>Innova_Days_Left__c</fullName>
    <label>Days Left</label>
    <length>100</length>
    <type>Text</type>
</CustomField>