force-app/main/default/objects/Innova_Location__c/fields/Innova_Lease_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Innova_Lease_Start_Date__c</fullName>
    <label>Lease Start Date</label>
    <type>Date</type>
</CustomField>