force-app/main/default/objects/Innova_Location__c/fields/Innova_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Innova_Sq_Ft__c</fullName>
    <label>Sq Ft.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>