force-app/main/default/objects/Innova_Location__c/fields/Innova_State__c.field-meta.xml
<CustomField>
    <fullName>Innova_State__c</fullName>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>