force-app/main/default/objects/Innova_Location__c/fields/Innova_Street__c.field-meta.xml
<CustomField>
    <fullName>Innova_Street__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>