force-app/main/default/objects/Innova_Location__c/fields/Innova_Term_end_date__c.field-meta.xml
<CustomField>
    <fullName>Innova_Term_end_date__c</fullName>
    <label>Term end date</label>
    <length>250</length>
    <type>Text</type>
</CustomField>