force-app/main/default/objects/Innova_Location__c/fields/Innova_Total_work_station_capacity__c.field-meta.xml
<CustomField>
    <fullName>Innova_Total_work_station_capacity__c</fullName>
    <label>Total work station capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>