force-app/main/default/objects/Innova_Location__c/fields/Innova_US_Region__c.field-meta.xml
<CustomField>
    <fullName>Innova_US_Region__c</fullName>
    <label>US Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>