force-app/main/default/objects/Innova_Location__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office Location</label>
    <referenceTo>Innova_Location__c</referenceTo>
    <relationshipLabel>Office Locations</relationshipLabel>
    <relationshipName>Office_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>