force-app/main/default/objects/Innova_Location__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <label>Zip/Postal Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>