force-app/main/default/objects/Innova_Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Innova_Brand__c</columns>
    <columns>Innova_Region__c</columns>
    <columns>Innova_Country__c</columns>
    <columns>Innova_City__c</columns>
    <columns>Innova_Street__c</columns>
    <columns>Zip_Postal_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>